src/test/ui/issues/issue-12511.rs
trait t1 : t2 {
//~^ ERROR cycle detected
}

trait t2 : t1 {
}

fn main() { }
